--- a/build.gradle
+++ b/build.gradle
@@ -197,16 +197,18 @@ dependencies {
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     }
 
-    compileOnly(rfg.deobf('curse.maven:jei-238222:4538010')) //jei
+    implementation(rfg.deobf('curse.maven:jei-238222:4538010')) //jei
     compileOnly(rfg.deobf('curse.maven:packagedauto-308380:2977147')) // 1.0.3.14
     compileOnly(rfg.deobf('curse.maven:codechicken-lib-1-8-242818:2779848')) //ccl
     compileOnly(rfg.deobf('curse.maven:gregtech-ce-unofficial-557242:5121638')) // gt
     implementation(rfg.deobf('curse.maven:ae2-extended-life-570458:5378163')) //pae2
     compileOnly(rfg.deobf('curse.maven:dynamistics-383632:3056455')) // dy
     compileOnly(rfg.deobf('curse.maven:baubles-227083:2518667')) //baubles
-    compileOnly(rfg.deobf("curse.maven:mekanism-ce-399904:4804509")) //mek-ce
+    implementation(rfg.deobf("curse.maven:mekanism-ce-399904:4804509")) //mek-ce
     compileOnly(rfg.deobf("curse.maven:mekanism-energistics-1027681:5389347")) //mekeng
     compileOnly(rfg.deobf('curse.maven:opencomputers-223008:4630537')) //oc
+    compileOnly(rfg.deobf("curse.maven:p455w0rdslib-255232:2830265"))
+    compileOnly(rfg.deobf("curse.maven:ae2wtlib-304024:2830114"))
     compileOnly(rfg.deobf("curse.maven:wireless-crafting-terminal-244559:2830252"))//wct
 }
 
