--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ show_testing_output = false
 
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-mod_version = 2.6.6-r
+mod_version = 2.7.0-unofficial
 root_package = com.glodblock.github
 mod_id = ae2fc
 mod_name = AE2FluidCraft-Rework
