--- a/build.gradle
+++ b/build.gradle
@@ -203,7 +203,9 @@ dependencies {
     compileOnly(rfg.deobf('curse.maven:gregtech-ce-unofficial-557242:5121638')) // gt
     implementation(rfg.deobf('curse.maven:ae2-extended-life-570458:5378163')) //pae2
     compileOnly(rfg.deobf('curse.maven:dynamistics-383632:3056455')) // dy
-    compileOnly(rfg.deobf('curse.maven:baubles-227083:2518667')) //baubles
+    implementation(rfg.deobf('curse.maven:baubles-227083:2518667')) //baubles
+    implementation(rfg.deobf("curse.maven:thaumic-223628:2629023"))
+    implementation(rfg.deobf("curse.maven:thaumic-energistics-extended-life-849094:6321322"))
     implementation(rfg.deobf("curse.maven:mekanism-ce-399904:4804509")) //mek-ce
     implementation(rfg.deobf("curse.maven:mekanism-energistics-1027681:5389347")) //mekeng
     compileOnly(rfg.deobf('curse.maven:opencomputers-223008:4630537')) //oc
