--- a/build.gradle
+++ b/build.gradle
@@ -197,7 +197,7 @@ dependencies {
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     }
 
-    implementation(rfg.deobf('curse.maven:jei-238222:4538010')) //jei
+    implementation(rfg.deobf("curse.maven:had-enough-items-557549:4810661"))
     compileOnly(rfg.deobf('curse.maven:packagedauto-308380:2977147')) // 1.0.3.14
     compileOnly(rfg.deobf('curse.maven:codechicken-lib-1-8-242818:2779848')) //ccl
     compileOnly(rfg.deobf('curse.maven:gregtech-ce-unofficial-557242:5121638')) // gt
